<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewClient.NewClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_patronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patronymic"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_passport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passport"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_phone_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_numbers"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_registration_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_address"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/edit_text_actual_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/actual_address"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/edit_text_personal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/personal_id"
            android:inputType="number" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>